add expert analytics by periods
