# service/docs/swagger.yaml
@@ -1,5 +1,20 @@
 basePath: /
 definitions:
+  dto.AnalyticsInterval:
+    properties:
+      all_cases_cnt:
+        type: integer
+      correct_cnt:
+        type: integer
+      date:
+        type: string
+      incorrect_cnt:
+        type: integer
+      max_consecutive_solved:
+        type: integer
+      unknown_cnt:
+        type: integer
+    type: object
   dto.Camera:
     properties:
       camera_id:
@@ -630,6 +645,47 @@ paths:
       summary: Ввод информации о транспорте и его владельце
       tags:
       - contact_info
+  /director/analytics/expert:
+    get:
+      description: Получить количество всех случаев, правильно решенных случае, неправильно
+        решенных случаев,
+      operationId: director-analytics-expert
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.AnalyticsInterval'
+            type: array
+        "204":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Body'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Body'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.Body'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Body'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/response.Body'
+      security:
+      - ApiKeyAuth: []
+      summary: Получение аналитики проверяющих специалистов по промежуткам времени
+      tags:
+      - director
   /director/cases:
     get:
       description: Получение состояния случаев. Воспользоваться может только директор
